# InfluxDBWindSVG

./: CMakeLists.txt  ReadMe.md  influxd-wind-svg.cpp  influxd-wind-svg.h  influxdbwindsvg-version.h.in  influxdbwindsvg.service  postinst  postrm  prerm
.github/workflows/: flawfinder.yml
InfluxDBWindSVG/DEBIAN/: control  postrm
InfluxDBWindSVG/usr/local/lib/systemd/system/: influxdbwindsvg.service
